<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView57"
        android:layout_width="0dp"
        android:layout_height="270dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/bg_white" />

    <ImageView
        android:id="@+id/imageView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pic_cang"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView57" />

    <ImageView
        android:id="@+id/imageView59"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView57"
        app:srcCompat="@color/bg_white" />

    <ImageView
        android:id="@+id/imageView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/order_time"
        app:layout_constraintTop_toTopOf="@+id/imageView59"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservation_cang"
        app:layout_constraintBottom_toBottomOf="@+id/imageView60"
        app:layout_constraintTop_toTopOf="@+id/imageView60"
        app:layout_constraintLeft_toRightOf="@+id/imageView60"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:background="@drawable/reservation_cang_time_shape"
        android:id="@+id/tv_reservation_time"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/reservation_cang_time"
        android:textColor="@color/text_hint_title_color"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView141"
        app:layout_constraintTop_toBottomOf="@+id/textView125" />

    <TextView
        android:id="@+id/textView141"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="分钟"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_reservation_time"
        app:layout_constraintLeft_toRightOf="@+id/tv_reservation_time"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/imageView61"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView59"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView142"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/reservation_cang_1"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView61"
        app:layout_constraintLeft_toLeftOf="@+id/imageView61"
        app:layout_constraintTop_toBottomOf="@+id/imageView61" />

    <TextView
        android:id="@+id/tv_cang_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="SH0001"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView61"
        app:layout_constraintRight_toRightOf="@+id/imageView61"
        app:layout_constraintTop_toBottomOf="@+id/imageView61" />

    <ImageView
        android:id="@+id/imageView62"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView61"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView145"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/reservation_cang_2"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView62"
        app:layout_constraintLeft_toLeftOf="@+id/imageView62"
        app:layout_constraintTop_toTopOf="@+id/imageView62"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tv_cang_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="空闲"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView62"
        app:layout_constraintRight_toRightOf="@+id/imageView62"
        app:layout_constraintTop_toTopOf="@+id/imageView62" />

    <ImageView
        android:id="@+id/imageView63"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView62"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView147"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/reservation_cang_price"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView63"
        app:layout_constraintLeft_toLeftOf="@+id/imageView63"
        app:layout_constraintTop_toTopOf="@+id/imageView63" />

    <TextView
        android:id="@+id/tv_reservation_cang_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/reservation_cang_price_1"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView63"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView63" />

</android.support.constraint.ConstraintLayout>