<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bg_grey"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView83"
        android:layout_width="0dp"
        android:layout_height="125dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/bg_white" />

    <ImageView
        android:id="@+id/imageView84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pay_success"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView83"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/textView155"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pay_success_1"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView84" />

    <ImageView
        android:id="@+id/imageView85"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:srcCompat="@color/bg_white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView83"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView158"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/pay_success_2"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView85"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/imageView86"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView85"
        app:srcCompat="@color/bg_white"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/imageView87"
        android:layout_width="33dp"
        android:layout_height="34dp"
        app:srcCompat="@drawable/sports_heat"
        app:layout_constraintTop_toTopOf="@+id/imageView86"
        app:layout_constraintBottom_toBottomOf="@+id/imageView86"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp" />

    <ImageView
        android:id="@+id/iv_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView163"
        app:layout_constraintLeft_toRightOf="@+id/imageView87"
        app:srcCompat="@drawable/sprite" />

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(雪碧)"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_food"
        app:layout_constraintLeft_toRightOf="@+id/iv_food" />

    <TextView
        android:id="@+id/tv_food_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="X2"
        android:textColor="#ffcc00"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_food_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_food_name" />

    <TextView
        android:id="@+id/textView163"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/pay_success_3"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView86"
        app:layout_constraintLeft_toRightOf="@+id/imageView87" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <ImageView
        android:id="@+id/imageView90"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:srcCompat="@drawable/sports_time"
        app:layout_constraintBottom_toTopOf="@+id/imageView86"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView86" />

    <TextView
        android:id="@+id/tv_sport_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="15min"
        android:textColor="#ffcc00"
        app:layout_constraintBottom_toTopOf="@+id/textView168"
        app:layout_constraintLeft_toRightOf="@+id/imageView90" />

    <TextView
        android:id="@+id/textView168"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_success_4"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/imageView86"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView90"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/imageView91"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView86"
        app:srcCompat="@color/bg_white" />

    <ImageView
        android:id="@+id/imageView92"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView91"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView91"
        app:srcCompat="@drawable/sports_order" />

    <TextView
        android:id="@+id/tv_sport_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="减脂"
        android:textColor="#ffcc00"
        app:layout_constraintBottom_toTopOf="@+id/textView170"
        app:layout_constraintLeft_toRightOf="@+id/imageView92" />

    <TextView
        android:id="@+id/textView170"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:text="@string/pay_success_5"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/imageView91"
        app:layout_constraintLeft_toRightOf="@+id/imageView92"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/imageView93"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView91"
        app:layout_constraintLeft_toLeftOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/imageView91"
        app:srcCompat="@drawable/sports_evaluate" />

    <TextView
        android:id="@+id/tv_sport_evaluate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="8dp"
        android:text="较长"
        android:textColor="#ffcc00"
        app:layout_constraintBottom_toTopOf="@+id/textView172"
        app:layout_constraintLeft_toRightOf="@+id/imageView93" />

    <TextView
        android:id="@+id/textView172"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="8dp"
        android:text="@string/pay_success_6"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/imageView91"
        app:layout_constraintLeft_toRightOf="@+id/imageView93" />

    <TextView
        android:background="@color/bg_white"
        android:id="@+id/tv_sprot_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="1dp"
        android:text=""
        android:textColor="#37343e"
        android:textSize="15sp"
        android:padding="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView91" />

    <TextView
        android:padding="12dp"
        android:id="@+id/textView174"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/pay_success_tips_shape"
        android:text="@string/pay_success_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sprot_tips" />

</android.support.constraint.ConstraintLayout>