<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <ImageView
        android:id="@+id/imageView68"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/imageView67"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scan_head" />

    <ImageView
        android:id="@+id/iv_cancel_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/imageView68"
        app:layout_constraintTop_toTopOf="@+id/imageView68"
        app:srcCompat="@drawable/scan_delete" />

    <ImageView
        android:id="@+id/imageView70"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView68"
        app:srcCompat="@color/bg_white" />

    <TextView
        android:id="@+id/textView144"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/cang_input_code"
        android:textColor="#ffb400"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView68" />

    <EditText
        android:id="@+id/et_cang_id"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/cang_input_id"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:paddingLeft="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/reservation_cang_time_shape"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView144"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_start_fit"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_shape"
        android:gravity="center"
        android:text="@string/cang_input_button"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cang_id" />

</android.support.constraint.ConstraintLayout>